@@ -1,3 +1,11 @@
+2002-09-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/panedwindow.test: added panedwindow-28.[12]
+	* generic/tkPanedWindow.c (PanedWindowCmdDeletedProc): 
+	(Tk_PanedWindowObjCmd): when destroying the panedwindow, destroy
+	the proxy before the parent to avoid dependency conflicts.
+	[Bug #616589]
+
 2002-09-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* tests/unixSelect.test: Test for various things that can fail to
